--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <button class="btn btnOpacity">opacity</button>
 
       </section>
+
+      <section class="bouncyBallContainer">
+        <div class="bouncyBall">
+
+        </div>
+
+      </section>
          
 
      
